--- a/public/tabcervidi.html
+++ b/public/tabcervidi.html
@@ -104,7 +104,7 @@
                 <tr>
                     <th>Incremento utile annuo I.U.A.</th>
                     <td>30 - 50%</td>
-                    <td>35%</td>
+                    <td>20 - 30%</td>
                     <td>30 - 40%</td>
                 </tr>
                 <tr>
@@ -152,14 +152,14 @@
                 <tr>
                     <th>Palco, anomalie</th>
                     <td>Trofeo a parrucca: è una deformazione causata dal danneggiamento dei testicoli, provoca la mancata perdita del velluto e la morte dell’animale.<br>Frattura scomposta dello stelo: causa la crescita in posizione anomala della stanga interessata, di norma non è fatale per l’animale</td>
-                    <td>Trofeo a parrucca: Conseguenza di una carenza ormonale (dovuta a castrazione bilaterale) che provoca la mancata perdita del velluto.<br>Mancanza di trofeo: detto cervo "calvo", è conseguenza di problemi ormonali in fase giovanile, in genre non crea problemi alla riproduzione.<br>Palco a cavatappi: consiste in una deformazione delle stanghe dovuta a problemi di mineralizzazione.<br>Riduzione delle ramificazioni: dovuta ad una frattura (arto) che altera il processo di mineralizzazione del palco.</td>
+                    <td>Trofeo a parrucca: conseguenza di una carenza ormonale (dovuta a castrazione bilaterale) che provoca la mancata perdita del velluto.<br>Mancanza di trofeo: detto cervo "calvo", è conseguenza di problemi ormonali in fase giovanile, in genere non crea problemi alla riproduzione.<br>Palco a cavatappi: consiste in una deformazione delle stanghe dovuta a problemi di mineralizzazione.<br>Riduzione delle ramificazioni: dovuta ad una frattura (arto) che altera il processo di mineralizzazione del palco.</td>
                     <td></td>
                 </tr>
                 <tr>
                     <th>Palco, ciclo (adulti)</th>
                     <td>Pulitura: febbraio-aprile<br>Caduta: ottobre - metà novembre<br>Individui più anziani puliscono e perdono i palchi prima dei giovani</td>
                     <td>Pulitura: luglio-agosto<br>Caduta: febbraio-aprile<br>Individui più anziani puliscono e perdono i palchi prima dei giovani</td>
-                    <td>Pulitura: agosto-settembre<br>Caduta: aprile-maggio</td>
+                    <td>Pulitura: agosto-settembre<br>Caduta: aprile-maggio<br>Individui più anziani puliscono e perdono i palchi prima dei giovani</td>
                 </tr>
                 <tr>
                     <th>Palco, nomenclatura</th>
