--- a/public/tabcervidi.html
+++ b/public/tabcervidi.html
@@ -201,7 +201,7 @@
                     <th>Specchio anale</th>
                     <td>Evidente in mantello invernale, nel maschio a forma di fagiolo, nella femmina a forma di cuore con falsa coda</td>
                     <td>Evidente in mantello invernale, poco evidente nel mantello estivo, coda di media lunghezza</td>
-                    <td>La lunghezza della coda distingue il daino dal cervo (provvisto di coda più corta) e dal capriolo (privo di coda). Il disegno ad ancora rovesciata dello specchio anale del daino è inconfondibile</td>
+                    <td>La lunghezza della coda distingue il daino dal cervo (provvisto di coda più corta) e dal capriolo (privo di coda, falsa coda solo nella femmina). Il disegno ad ancora rovesciata dello specchio anale del daino è inconfondibile</td>
                 </tr>
                 <tr>
                     <th>Strategia alimentare</th>
