--- a/public/tabcervidi.html
+++ b/public/tabcervidi.html
@@ -163,8 +163,8 @@
                 </tr>
                 <tr>
                     <th>Palco, nomenclatura</th>
-                    <td>Formato da stanga, oculare, vertice e stocco</td>
-                    <td>Formato da stanga, oculare o pugnale, (ago), mediano o pila e corona</td>
+                    <td>Formato da stanga, oculare, vertice e stocco. Un individuo con una sola punta viene detto puntuto, con due punte forcuto e con il palco completo palcuto. </td>
+                    <td>Formato da stanga, oculare o pugnale, (ago), mediano o pila e corona. Qualora la corona non presenti almeno 3 punte si parla di forca.</td>
                     <td>Formato da stanga, oculare, mediano, pala e spina</td>
                 </tr>
                 <tr>
