--- a/public/tabcervidi.html
+++ b/public/tabcervidi.html
@@ -84,6 +84,12 @@
                     <td>Maschio: 80 cm<br>Femmina: 70 - 80 cm</td>
                 </tr>
                 <tr>
+                    <th>Classi d'età</th>
+                    <td>Maschi<br>Classe 0: piccoli nati nell'anno<br>Classe 1: giovani nati nell'anno precedente, caratterizzati da aspetto esile e palchi lunghi circa quanto le orecchie, solitamente puntuti.<br>Classe 2: adulti da due anni in su, caratterizzati da aspetto più massiccio e palchi lunghi più delle orecchie e ramificati(forcuti o palcuti)<br>Femmine<br>Classe 0: piccole nate nell'anno<br>Classe 1: giovani nate l'anno precedente, dette sottili poiché non hanno ancora partorito<br>Classe 2: adulte</td>
+                    <td>Maschi<br>Classe 0: piccoli nati nell'anno<br>Classe 1: giovani nati nell'anno precedente, detti fusoni, il palco è costituito da una sola stanga con concavità verso il posteriore e struttura fisica abbastanza esile.<br>Classe 2: sub-adulti da 2 anni 5 anni, di solito presenti l'oculare e il mediano.<br>Classe 3: adulti, corporatura massiccia, il trofeo raggiunge forma e lunghezza definitive, in seguito si può avere un aumento della massa e del numero di cime della corona.<br>Femmine<br>Classe 0: piccole nate nell'anno<br>Classe 1: giovani nate l'anno precedente, dette sottili poiché non hanno ancora partorito<br>Classe 2: adulte, caratteristico muso allungutato </td>
+                    <td>Maschi<br>Classe 0: piccoli nati nell'anno<br>Classe 1: giovani nati nell'anno precedente, detti fusoni, il palco è costituito da una sola stanga con concavità verso il posteriore e struttura fisica abbastanza esile.<br>Classe 2: sub-adulti da 2 anni 4 anni detti balestroni, palco solitamente costituito da oculare mediano e spina, pala inferiore ai 10 cm in larghezza, scarsa apertura del trofeo.<br>Classe 3: adulti, a partire dalla 4° - 5° testa, pala di oltre 10 cm di larghezza, stanga robusta, notevole apertura.<br>Femmine<br>Classe 0: piccole nate nell'anno<br>Classe 1: giovani nate l'anno precedente, dette sottili poiché non hanno ancora partorito<br>Classe 2: adulte, da 2 anni in poi.</td>
+                </tr>
+                <tr>
                     <th>Gestazione</th>
                     <td>280 - 290 giorni, con diapausa embrionale</td>
                     <td>234 - 236 giorni</td>
