--- a/public/tabcervidi.html
+++ b/public/tabcervidi.html
@@ -199,9 +199,9 @@
                 </tr>
                 <tr>
                     <th>Peso vuoto</th>
-                    <td>Maschio: 15.75 - 21 Kg<br>Femmina: 15 - 17.25 Kg</td>
-                    <td>Maschio: 84.5 / 91 - 162.5 / 175 Kg<br>Femmina: 52 / 56 - 84.5 / 91 Kg</td>
-                    <td>Maschio: 39 / 42 - 71.5 / 77 Kg<br>Femmina: 26 / 28 - 42.25 / 45.5 Kg</td>
+                    <td>Maschio: 75% circa del peso pieno<br>Femmina: 75% circa del peso pieno</td>
+                    <td>Maschio: 65 - 70% circa del peso pieno<br>Femmina: 65 - 70% circa del peso pieno</td>
+                    <td>Maschio: 65 - 70% circa del peso pieno<br>Femmina: 65 - 70% circa del peso pieno</td>
                 </tr>
                 <tr>
                     <th>Specchio anale</th>
